@@ -1,3 +1,8 @@
+2005-05-09  Sam Steingold  <sds@gnu.org>
+
+	* places.lisp (*ansi*): fixed the doc string: mention all 13 variables
+	and avoid non-ASCII characters to ensure non-UTF8 terminal compatibility
+
 2005-05-06  Sam Steingold  <sds@gnu.org>
 
 	* modules/clx/new-clx/image.lisp, modules/clx/new-clx/resource.lisp:
